style: 💅 fix alignment issues for tournament cards

--- a/packages/tennis-tournaments/src/TournamentCard.module.css
+++ b/packages/tennis-tournaments/src/TournamentCard.module.css
@@ -17,12 +17,12 @@
 }
 
 .TournamentCard {
+  display: inline-flex;
+  flex-direction: column;
+
   /* inner card width (306.5px) + 2x padding (12.8px) + 2x margin (5px) */
   min-width: 342.1px;
   height: 16rem;
-
-  display: inline-flex;
-  flex-direction: column;
 
   /* <a> element underlines text by default */
   text-decoration: none;
@@ -43,21 +43,24 @@
 }
 
 .TournamentHead {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
   height: 100%;
+
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
 
 .TournamentHeadTop {
-  height: 50%;
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
 }
 
 .TournamentHeadBottom {
-  height: 50%;
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
