--- a/packages/tennis-tournaments/src/TournamentsPage.module.css
+++ b/packages/tennis-tournaments/src/TournamentsPage.module.css
@@ -8,6 +8,10 @@
   font-weight: 900;
 }
 
+/*
+  Flex + wrap mitigates alignment issues
+  between tournament cards with and without "LIVE" label
+*/
 .Tournaments {
   display: flex;
   flex-wrap: wrap;
